Adding new forms and change in overall look and feel

--- a/TestFat.csproj
+++ b/TestFat.csproj
@@ -52,6 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
+    <Compile Include="AnbiyamPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnbiyamPopup.Designer.cs">
+      <DependentUpon>AnbiyamPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -61,6 +67,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AnbiyamPopup.resx">
+      <DependentUpon>AnbiyamPopup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
