--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
 
 	<connectionStrings>
 		<add name="DefaultConnection"
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=fatimachurchtbm;Integrated Security=True;"
+			 connectionString="Data Source=fathimatbmdbdev.database.windows.net,1433;Initial Catalog=FatimaTBM;Persist Security Info=False;User ID=fathimatbmdev;Password=Abcde@12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
