--- a/App.config
+++ b/App.config
@@ -9,5 +9,8 @@
 			 connectionString="Data Source=fathimatbmdbdev.database.windows.net,1433;Initial Catalog=FatimaTBM;Persist Security Info=False;User ID=;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=5;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
+	<appSettings>
+		<add key="showMap" value="false"/>
+	</appSettings>
 	
 </configuration>
