--- a/FatimaChurchForms.csproj
+++ b/FatimaChurchForms.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="NonParishFamily.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NonParishFamily.Designer.cs">
+      <DependentUpon>NonParishFamily.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProgressForm.cs">
       <SubType>Form</SubType>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NonParishFamily.resx">
+      <DependentUpon>NonParishFamily.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
